--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "file-loader": "^6.2.0",
     "next": "13.3.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-three-fiber": "^6.0.13",
